<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.CalculatorFragment"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/recentDisplayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:accessibilityHeading="false">

            <EditText
                android:id="@+id/currentDisplayTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_text"
                android:textSize="35sp"
                android:singleLine="true"
                android:inputType="numberDecimal" />

            <ImageButton
                android:id="@+id/button_copy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/purple_500"
                android:src="?attr/actionModeCopyDrawable"
                app:tint="@color/white" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="12"
            android:progress="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button_clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/clear_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_clear_all"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/clear_all_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_factorial"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/factorial_button"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/button_backspace"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:src="@android:drawable/ic_input_delete"
                android:textSize="20sp"
                app:tint="@color/purple_500" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/button_sqrt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/sqrt_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_pow"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/pow_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_percent"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/percent_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_divide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/divide_button"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/button_7"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/seven_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/eight_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/nine_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_multiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/multiply_button"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/button_4"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/four_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/five_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/six_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/minus_button"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/one_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/two_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/three_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/plus_button"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/button_change_sign"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/change_sign_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/zero_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_point"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/point_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_result"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/result_button"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>